--- a/stylesheets/02_layout_screen.css
+++ b/stylesheets/02_layout_screen.css
@@ -78,15 +78,6 @@ a {
 #header li a {
   padding:                .5em .65em 0em 0.35em;
 }
-
-body.galleries #header li.best_galleries, 
-body.full_galleries #header li.full_galleries, 
-body.all_videos #header li.all_videos, 
-body.quem_somos #header li.quem_somos, 
-body.contact #header li.contact, 
-body.blog #header li.blog {
-
-}
 /* /Header tabbed menu */
 
 
@@ -465,27 +456,6 @@ body#search #search_result_count label {
 /* /Selection */
 
 
-/* Who */
-.quem_somos #main_content p {
-  margin:                 1em 0;
-}
-
-.quem_somos dt {
-  float:                  left;
-  margin-right:           .5em;
-}
-
-.quem_somos dd {
-  margin:                 .25em 0 1em 2.5em;
-}
-
-.quem_somos #main_content cite {
-  display:                block;
-	padding:                46px 58px 14px 0;
-}
-/* /Who */
-
-
 /* Forms (contact, checkout, search) */
 label {
 	display:                block;
@@ -662,80 +632,100 @@ body > #facebox {
 /* /Footer */
 
 
+/* Text */
+.text #main_content {
+  padding-right:          200px;
+  padding-left:           200px;
+}
 
-/* Instructions */
-body.instructions #toc {
+.text #main_content p {
+  margin:                 1em 0;
+}
+
+.text #main_content h1, 
+.text #main_content h2, 
+.text #main_content h3 {
+  margin-right:           -138px;
+  margin-left:            -138px; 
+}
+
+.text #main_content h2 {
+  clear:                  left;
+  padding:                1.5em 0 1em 0;
+}
+
+.text #main_content h3 {
+  padding:                1em 0 .75em 0;
+}
+
+.text #main_content h4 {
+  margin-top:             -.8em;
+}
+
+.text #main_content dl, 
+.text #main_content ul {
+  margin:                 1.6em 6em;
+}
+
+.text dt {
+  float:                  left;
+  margin-right:           .5em;
+}
+
+.text #main_content dd {
+  margin:                 0 0 1em 2.5em;
+}
+
+.text #main_content ul li {
+  margin-bottom:          1em;
+}
+
+.text #main_content ul ul {
+  margin:                 0 1em;
+}
+
+.text #main_content cite {
+  display:                block;
+}
+
+.text #toc {
   float:                  left;
   padding:                .75em .75em .75em 1.5em;
   border:                 1px solid;
   margin:                 0 2em 1em 0 !important;
 }
 
-.instructions #main_content p {
-  margin:                 1em 0;
-}
-
-.instructions #main_content h2 {
-  clear:                  left;
-  padding:                1.5em 0 1em 0;
-}
-
-.instructions #main_content h3 {
-  padding:                1em 0 .75em 0;
-}
-
-.instructions #main_content dl, 
-.instructions #main_content ul {
-  margin:                 1.6em 6em;
-}
-
-.instructions #main_content dd {
-  margin:                 0 0 1em 2.5em;
-}
-
-.instructions #main_content ul li {
-  margin-bottom:          1em;
-}
-
-.instructions #main_content ul ul {
-  margin:                 0 1em;
-}
-
-code {
-  padding:                .3em .5em;
-}
-
-.instructions table {
+.text table {
   border-collapse:        collapse;
   margin:                 auto;
 }
 
-.instructions table * {
+.text table * {
   border:                 1px solid;
 }
 
-.instructions th {
+.text th {
   padding:                .5em 1.5em;
 }
 
-.instructions td {
+.text td {
   padding:                .5em 1.5em;
 }
 
-.instructions td span {
+.text td span {
   display:                block;
   border:                 none;
   margin:                 0 1.5em;
 }
 
-.instructions td a, 
-.instructions td code {
+.text td a, 
+.text td code {
   border:                 none;
   margin:                 0 -1em;
   white-space:            nowrap;
 }
 
-.instructions td code {
+.text td code {
   display:                block;
   margin-top:             .75em;
 }
@@ -747,7 +737,7 @@ pre {
   overflow:               auto;
 }
 
-.instructions #main_content h4 {
-  margin-top:             -.8em;
+code {
+  padding:                .3em .5em;
 }
-/* /Instructions */
+/* /Text */
