--- a/stylesheets/01_typography.css
+++ b/stylesheets/01_typography.css
@@ -165,7 +165,7 @@ strong {
 }
 
 #big_video object h1 {
-  text-align:          left;
+  text-align:           left;
 }
 
 #big_video object p {
@@ -190,13 +190,13 @@ strong {
 
 #data_sheet li {
   font-weight:          bold;
-  line-height:         2em;
+  line-height:          2em;
 }
 
 #facebox a {
-  font-size:           80%;
+  font-size:            80%;
   text-align:           right;
-  text-transform:      uppercase;
+  text-transform:       uppercase;
 }
 
 #footer a {
@@ -208,7 +208,7 @@ strong {
 }
 
 #footer * {
-  line-height:         1.25em;
+  line-height:          1.25em;
   text-align:           right;
 }
 
@@ -226,8 +226,8 @@ strong {
 }
 
 #header h1 a, #header h1 img {
-  font-size:           90%;
-  word-spacing:        0.2em;
+  font-size:            90%;
+  word-spacing:         .2em;
   text-decoration:      none;
 }
 
@@ -266,7 +266,7 @@ strong {
 }
 
 #summary #see_data_sheet {
-  line-height:         2.5em;
+  line-height:          2.5em;
   text-transform:       uppercase;
 }
 
@@ -276,7 +276,7 @@ strong {
 }
 
 #tags p {
-  line-height:         .5em;
+  line-height:          .5em;
 }
 
 #tags p, #tags a {
@@ -288,7 +288,7 @@ strong {
 }
 
 #valid_search_suggestions li {
-  font-size:           90%;
+  font-size:            90%;
   line-height:          1.4em;
 }
 
@@ -308,7 +308,7 @@ strong {
 body#checkout #order_form p, 
 body#pictures_sent #order_form p {
   font-size:            90%;
-  line-height:         2.5em;
+  line-height:          2.5em;
   text-align:           center;
 }
 
@@ -318,9 +318,9 @@ body#checkout #selection_size label, body#search #search_result_count label {
 }
 
 body#selection #selection_size, body#selection #selection_size label {
-  font-size:           100%;
-  font-weight:         bold;
-  line-height:         2em;
+  font-size:            100%;
+  font-weight:          bold;
+  line-height:          2em;
 }
 
 h2#slogan {
@@ -329,7 +329,7 @@ h2#slogan {
 }
 
 p#not_found, .application #main_content h2 {
-  font-size:           95%;
+  font-size:            95%;
   line-height:          1.7em;
   text-align:           center;
 }
@@ -349,11 +349,11 @@ p#not_found, .application #main_content h2 {
 }
 
 #back_to_gallery a:hover {
-  text-decoration:     none;
+  text-decoration:      none;
 }
 
 #go_back_to_thumbnails:hover {
-  text-decoration:     none;
+  text-decoration:      none;
 }
 
 #header h1 a, h1 a:visited, .pages a:hover, .pages a.previous:hover, .pages a.next:hover, #tags a:hover, #go_to_selection a, #all_pictures a, #cart_items a, #selected_pictures a {
@@ -369,9 +369,9 @@ p#not_found, .application #main_content h2 {
 }
 
 .application #main_content ul li a, .application #main_content ul li a:visited, #valid_search_suggestions a, #go_to_selection a:link, #go_to_selection a:visited, .go_to_checkout a {
-  text-decoration:     none;
+  text-decoration:      none;
 }
 
 .application #main_content ul li a:hover, #valid_search_suggestions a:hover, .go_to_checkout a:hover {
-  text-decoration:     none;
+  text-decoration:      none;
 }
