--- a/stylesheets/02_layout_screen.css
+++ b/stylesheets/02_layout_screen.css
@@ -570,7 +570,7 @@ body > #facebox {
   left:                 1em;
 }
 .submitting, .submitting:hover {
-  border:              1px solid;
+  border:               1px solid;
 }
 .submitting:active {
   border-style:         outset;
