--- a/stylesheets/01_typography.css
+++ b/stylesheets/01_typography.css
@@ -202,6 +202,9 @@ strong {
 #footer a {
   text-decoration:      none;
 }
+#footer a:hover {
+  text-decoration:      underline;
+}
 
 #footer h6 {
   font-size:            70%;
